replace /get route with /retrieve
